# fastly-grpc-web-example

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  fastly.toml
client/: build_grpc.sh  index.html  index.js  package-lock.json  package.json
src/: codec.rs  main.rs
