[package]
name = "fastly-grpc-web-example"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[profile.release]
debug = 1

[dependencies]
fastly = "^0.9.2"
prost = "0.11.8"
tonic = { version = "0.9.1", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { version = "0.9.1", default-features = false, features = ["prost", "prost-build"] }
